welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value n
  for (i<- 0 to n){T(i)=nombre}
                ^